--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -264,7 +264,7 @@ We will refer to this expression as the \WY{} or shortly \abb{WY} formula. The a
 
 In the time when \WY{} published their work, it seemed perfectly plausible to describe the hadronic amplitude as $\FH(t) \propto \e^{Bt/2}$, where $B$ is the diffractive slope (constant). Then the interference phase would simplify (in the limit of low scattering-angles and high energies) to
 \eqref{\Ph_{\rm SWY}(t) = \mp \left(\log {B|t|\over 2} + \ga \right) + \O{\al} \ ,}{el phase SWY}
-where $\ga \doteq 0.577$ is the Euler's constant. This result will be referred as the simplified \WY{} or shortly \abb{SWY} formula.
+where $\ga \doteq 0.577$ is the Euler's constant. This result will be referred to as the simplified \WY{} or shortly \abb{SWY} formula.
 
 It is perhaps fair to mention two works that preceded the publication of \WaY{} \bref{wy68} and which pursued a very similar approach. Both Rix and Thaler \bref{rix66} and Locher \bref{locher67} tried to evaluate the contribution of the diagram C in \Fg{el diagrams} in various degrees of approximation. Locher first analyzed the case with a $t$-independent hadronic amplitude $\FH=\hbox{const}$. Later he improved the approximation by admitting an exponential dependence $\FH \propto \exp(Bt)$, however he constrained himself to very forward scattering ($t\approx 0\un{GeV^2}$). In this way he avoided the troubles with $\FH$ going off mass-shell. His final result was an analogue of the simplified \WaY{} formula \Eq{el phase SWY}, but with exponential form factors included. The approach of Rix and Thaler is even more similar to the one of \WaY. Their final result resembles \Eq{el phase WY}, however the first term $\log(t/t_{\rm min})$ is replaced by $2\log\ga$. Let us remark that both Rix and Thaler and Locher, when evaluating the diagram C, replaced the internal fermion propagators by the denominator delta functions. This step was criticized by \WaY{} (see the last paragraph on page 172 in \bref{wy68}) for not being accurate.
 
@@ -322,7 +322,7 @@ The authors used the assumption of vanishing form factors at $t_{\rm min}$. Whil
 	\pm G_{\rm eff}^2(T)\,\log {t\over T}
 	+ \O{\al}\ .
 }{el phase CKL}
-This phase will be referred as the corrected \KL{} or shortly \abb{CKL} formula. We will discuss the meaning of the parameter $T$ later on (see the text around \Eq{el T 2}). For the time being we can identify $T = t_{\rm min}$ to recover the formula of \KL{} or let $T\to -\infty$ for Cahn's formula (for no form factor $G_{\rm eff}^2(t) \equiv 1$ one can simplify $I(t, t') = -2\pi / |t' - t|$).
+This phase will be referred to as the corrected \KL{} or shortly \abb{CKL} formula. We will discuss the meaning of the parameter $T$ later on (see the text around \Eq{el T 2}). For the time being we can identify $T = t_{\rm min}$ to recover the formula of \KL{} or let $T\to -\infty$ for Cahn's formula (for no form factor $G_{\rm eff}^2(t) \equiv 1$ one can simplify $I(t, t') = -2\pi / |t' - t|$).
 
 The work of Selyugin \bref{selyugin99} provides a refinement of Cahn's $\nu(t)$ calculation. In contrary to Cahn, Selyugin used the full dipole form factor $F_{\rm d}(t)$. However both calculations were performed on the same level of approximation -- the phase modifications were extracted from the order $\al$ and $\al^2$ contributions to $\FC(t)$. Selyugin's expression for $\nu(t)$ is rather complicated and thus he proposed a simpler form that approximates the full result well:
 \eqref{\nu_{\rm Selyugin}(t) = c_1 \log (1 - c_2^2 t),\qquad c_1 = 0.11,\qquad c_2 = 200\un{GeV^{-1}}\ .}{el nu Selyugin}
@@ -366,7 +366,7 @@ The above doubts led us to verify Cahn's formula by a numerical calculation base
 \bmfig
 \fig{fig/pdf/el_cic_diff_F_C.pdf}{el cic diff FC}{[7cm]The modulus of the complete Coulomb amplitude calculated for $\sqrt s = 7\un{TeV}$ with the eikonal formula and Puckett form factor. The Born curve is overlapped with the green and blue curves.}
 %
-\fig{fig/pdf/el_cic_diff_nu.pdf}{el cic diff nu}{[7cm]The form-factor-induced Coulomb phase shift $\nu(t)$. The colorful lines have been calculated with the eikonal formula ($\la = 10^{-4}\un{GeV}$).}
+\fig{fig/pdf/el_cic_diff_nu.pdf}{el cic diff nu}{[7.5cm]The form-factor-induced Coulomb phase shift $\nu(t)$. The colorful lines have been calculated with the eikonal formula ($\la = 10^{-4}\un{GeV}$).}
 \emfig
 
 
