--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -1,12 +1,8 @@
-\iffalse
-DPE, SD, MC
-\fi
-
 \chapter[felm]{The first elastic scattering measurement at the LHC}
 
 This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the \abb{LHC}. This achievement, published in \bref{totem11}, is a result of efforts of the entire \abb{TOTEM} collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis.
 
-This analysis is based on the data from 29-30 October, when the \abb{RP}s were approached to $7\si$ from the beam and the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^-1}$.
+This analysis is based on the data from 29-30 October, when the \abb{RP}s were approached to $7\si$ from the beam and the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^{-1}}$.
 
 \fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The analysis work-flow, from raw data to the differential cross-section of the elastic scattering.}
 
@@ -50,13 +46,14 @@ Let us comment on the vertex terms (see \Eq{ttm lin par}) that might seem to be 
 
 \section[felm bckg]{Background}
 
+\fig{fig/pdf/felm_cuts.pdf}{felm cuts}{The selection cuts (for the diagonal 45 bottom -- 56 top). The color scale follows logarithmically the bin contents in the order: white, blue, green, red and black.}
+
 The elastic-event-selection cuts for the final analysis have evolved compared to those used in \Sc{al elast}. At the end six cuts have been used, as shown in \Fg{felm cuts}. They are qualitatively similar to those presented in \Fg{al el selection}. The cut condition could be written as
 \eqref{|q_i| < 3 \si_i\ ,}{felm cut}
 where the \em{cut quantity} $q_i$ gives the distance from the ``expectation'' line which is drawn dotted in \Fg{felm cuts}. $\si_i$ is an experimentally determined standard deviation of the elastic-event distribution projected into the cut quantity.
 
 Cuts 1 and 2 represent collinearity requirements, that is the left and right protons shall have opposite directions. The rest of the cuts implement low-$\xi$ requirements -- for such particles there is a high correlation between the hit position and the angle in a station.
 
-\fig{fig/pdf/felm_cuts.pdf}{felm cuts}{The selection cuts (for the diagonal 45 bottom -- 56 top). The color scale follows logarithmically the bin contents in the order: white, blue, green, red and black.}
 
 As \Eq{felm cut} suggests, all cuts have been applied on a $3\si$-level. Therefore we expect them to be of a very high efficiency. That is the number of true elastic events that fail the selection cuts is negligible. On the other hand, we expect a number of non-elastic ($\equiv$ background) events to pass the cuts -- these events will be studied in this section.
 
