--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1436,7 +1436,7 @@
 
 @Url{root matrix,
 	title = "Linear Algebra in ROOT",
-	url = "ftp://root.cern.ch/root/doc/14LinearAlgebra.pdf"
+	url = "ftp://root.cern.ch/root/doc/14LinearAlgebra\=.pdf"
 	year = "2008"
 }
 
